# R-CI

./: .coverage  README.md  pyproject.toml
.github/workflows/: python-app.yml
rci/rci/: src.py
rci/tests/: test_module.py
